# bass_instrument_app

./: .gitignore  CMakeLists.txt  game.apk
include/: button.hpp  note.h  samplefiles.h  surface.hpp  synth.h  touch.h  touch.hpp
src/: main.cpp
